# FiscalPilot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.web  GETTING_STARTED.md  LICENSE  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_connector.md
.github/workflows/: ci.yml  release.yml
examples/restaurant/: QUICKBOOKS.md  fiscalpilot.yaml  run_scan.py  transactions.csv
src/fiscalpilot/: __init__.py  cli.py  config.py  pilot.py
src/fiscalpilot/agents/: __init__.py  base.py  coordinator.py  cost_cutter.py  cost_optimizer.py  fraud_detector.py  margin_optimizer.py  restaurant.py  revenue_analyzer.py  risk_detector.py  vendor_auditor.py  waste_detector.py
src/fiscalpilot/analyzers/: __init__.py  alerts.py  anomaly.py  audit_trail.py  auto_categorizer.py  benchmarks.py  benfords.py  board_reports.py  breakeven.py  budget.py  cashflow.py  chat.py  collaboration.py  currency.py  delivery_roi.py  duplicate_detector.py  general_ledger.py  inventory.py  invoice_processor.py  kpi_builder.py  labor_cost.py  menu_engineering.py  ml_forecasting.py  multi_entity.py  policy_engine.py  recipe_costing.py  reconciliation.py  report_scheduler.py  restaurant.py  scenario_planning.py  tax_optimizer.py  three_way_matching.py  tip_credit.py  transaction_splitting.py  vendor_management.py
src/fiscalpilot/auth/: __init__.py  oauth2.py
src/fiscalpilot/connectors/: __init__.py  base.py  clover_connector.py  csv_connector.py  excel_connector.py  plaid_connector.py  quickbooks_connector.py  registry.py  sql_connector.py  square_connector.py  toast_connector.py  xero_connector.py
src/fiscalpilot/data/: industry_benchmarks.json
src/fiscalpilot/execution/: __init__.py  approval.py  engine.py
src/fiscalpilot/execution/executors/: __init__.py  base.py
src/fiscalpilot/exporters/: __init__.py  html.py  markdown.py
src/fiscalpilot/models/: actions.py  company.py  financial.py  report.py
tests/: test_actions.py  test_agents.py  test_anomaly.py  test_approval.py  test_auto_categorizer.py  test_benchmarks.py  test_benfords.py  test_breakeven.py  test_budget.py  test_cashflow.py  test_chat.py  test_config.py  test_csv_connector.py  test_currency.py  test_delivery_roi.py  test_duplicate_detector.py  test_execution.py  test_exporters.py  test_html_exporter.py  test_integration.py  test_invoice_processor.py  test_menu_engineering.py  test_models.py  test_oauth2.py  test_plaid_connector.py  test_policy_engine.py  test_quickbooks_connector.py  test_reconciliation.py  test_registry.py  test_restaurant.py  test_restaurant_agent.py  test_square_connector.py  test_tax_optimizer.py  test_tip_credit.py  test_xero_connector.py
