[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fiscalpilot"
version = "0.6.0"
description = "The Open-Source AI CFO — Analyze, recommend, and execute. Your AI-powered Chief Financial Officer."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "FiscalPilot Contributors" },
]
keywords = [
    "ai",
    "finance",
    "agent",
    "risk-detection",
    "cost-optimization",
    "cfo",
    "financial-analysis",
    "llm",
    "open-source",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "litellm>=1.40.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.12",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3", "pdf2image>=1.16", "Pillow>=10.0"]
web = ["streamlit>=1.32"]
all = [
    "pytesseract>=0.3",
    "pdf2image>=1.16",
    "Pillow>=10.0",
    "streamlit>=1.32",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/meetpandya27/FiscalPilot"
Documentation = "https://fiscalpilot.dev"
Repository = "https://github.com/meetpandya27/FiscalPilot"
Issues = "https://github.com/meetpandya27/FiscalPilot/issues"
Changelog = "https://github.com/meetpandya27/FiscalPilot/blob/main/CHANGELOG.md"

[project.scripts]
fiscalpilot = "fiscalpilot.cli:app"
fp = "fiscalpilot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fiscalpilot"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B904", "SIM105", "SIM108"]  # Allow common test patterns
"src/fiscalpilot/cli.py" = ["B904"]  # Click/typer patterns
"src/fiscalpilot/models/*" = ["TC001", "TC003"]  # Pydantic models need runtime imports

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require real API credentials)",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
# Relaxed strictness - strict = true is too pedantic for rapid development
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "fiscalpilot.analyzers.menu_engineering",
    "fiscalpilot.connectors.plaid_connector",
    "fiscalpilot.connectors.square_connector",
    "fiscalpilot.connectors.xero_connector",
    "fiscalpilot.connectors.quickbooks_connector",
    "fiscalpilot.config",
    "fiscalpilot.agents.restaurant",
]
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Allow assert in tests

[tool.coverage.run]
source = ["src/fiscalpilot"]
branch = true
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 80
